--- a/package.json
+++ b/package.json
@@ -6,23 +6,30 @@
   "scripts": {
     "dev": "vite",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev --prefix server\"",
-    "build": "vite build",
+    "build": "vite build && cd server && npm run build",
     "preview": "vite preview",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
-    "db:init": "docker-compose exec -T postgres psql -U teu -d teu < server/schema.sql"
+    "db:init": "docker-compose exec -T postgres psql -U teu -d teu < server/schema.sql",
+    "db:migrate": "docker-compose exec -T postgres psql -U teu -d teu < server/migrations/001_add_projects.sql"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
+    "antd": "^6.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "pg": "^8.12.0",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.19",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "date-fns": "^3.6.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.0",
-    "typescript": "^5.4.0"
+    "concurrently": "^8.2.2",
+    "typescript": "^5.4.0",
+    "vite": "^5.2.0"
   }
 }
