--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "rewrites": [{"source": "/((?!api).*)", "destination": "/index.html"}],
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/catchall" },
+    { "source": "/((?!api).*)", "destination": "/index.html" }
+  ],
   "headers": [
-    {"source": "/api/(.*)", "headers": [{"key": "Cache-Control", "value": "no-store"}]}
+    { "source": "/api/(.*)", "headers": [{ "key": "Cache-Control", "value": "no-store" }] }
   ]
 }
