Update Vercel configuration and .gitignore for build output management
- Added 'dist' and 'public' directories to .gitignore to prevent unnecessary files from being tracked.
- Simplified Vercel rewrites by removing the catchall API handler reference.
- Configured Vite to output build files to the 'public' directory and set it to empty on build.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/catchall?path=$1" },
-    { "source": "/((?!api).*)", "destination": "/index.html" }
-  ],
+  "rewrites": [{ "source": "/((?!api).*)", "destination": "/index.html" }],
   "headers": [
     { "source": "/api/(.*)", "headers": [{ "key": "Cache-Control", "value": "no-store" }] }
   ]
